--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
         
         <repository>
             <id>dmulloy2-repo</id>
-            <url>https://repo.dmulloy2.net/repository/public/</url>
+            <url>https://repo.dmulloy2.net/repository/snapshots/</url>
         </repository>
 
         <repository>
@@ -76,7 +76,7 @@
         <dependency>
             <groupId>com.comphenix.protocol</groupId>
             <artifactId>ProtocolLib</artifactId>
-            <version>5.1.0</version>
+            <version>5.1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
