Simulate ghost joins and quits

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,6 +10,25 @@ ai-settings:
 events:
   welcome-chance: 0.6
   reply-chance: 0.2
+death-settings:
+  enabled: true
+  chance: 0.05
+  cmi-format: "&e{name} &f{reason}"
+  death-reasons:
+    - "fell from a high place"
+    - "drowned"
+    - "tried to swim in lava"
+    - "was blown up by Creeper"
+    - "was slain by Zombie"
+    - "hit the ground too hard"
+    - "was shot by Skeleton"
+connection-settings:
+  enabled: true
+  interval-seconds: 30
+  quit-chance: 0.02
+  rejoin-chance: 0.1
+  cmi-join-format: "&e{name} &e加入游戏"
+  cmi-quit-format: "&e{name} &e退出游戏"
 messages:
   welcome-phrases:
     - "欢迎新人"
@@ -25,6 +44,92 @@ messages:
     - "有人出铁吗"
     - "服主在吗"
     - "这服务器什么时候清地形"
+    - "掉帧了"
+    - "460了"
+    - "延迟爆炸"
+    - "卡成PPT"
+    - "这服是土豆做的吗"
+    - "ping飘了"
+    - "回档了吗"
+    - "又回滚？"
+    - "刚才瞬移了"
+    - "卡顿警告"
+    - "有人出钻吗"
+    - "收经验修补"
+    - "物价离谱"
+    - "收个鞘翅"
+    - "谁卖潜影盒"
+    - "求效率V"
+    - "收三叉戟"
+    - "有人出绿宝石"
+    - "求个好价"
+    - "收点骨粉"
+    - "苦力怕又炸家了"
+    - "我靠岩浆"
+    - "饿死了"
+    - "刚下矿就翻车"
+    - "又被僵尸围了"
+    - "末影人好吓人"
+    - "床被拆了"
+    - "没煤了"
+    - "挖半天啥都没"
+    - "雨下不停烦"
+    - "怎么圈地来着"
+    - "箱子怎么上锁"
+    - "有tpa吗"
+    - "有warp吗"
+    - "死亡不掉落开了吗"
+    - "怎么回主城"
+    - "有地狱门保护吗"
+    - "这服有领地插件吗"
+    - "指令谁懂"
+    - "有投票奖励吗"
+    - "？"
+    - "。。。"
+    - "afk"
+    - "挂机一下"
+    - "先挂会"
+    - "服主在不"
+    - "有人吗"
+    - "w"
+    - "嗯"
+    - "呃"
+    - "在干嘛呢"
+    - "666"
+    - "tql"
+    - "大佬带带我"
+    - "求带"
+    - "谁来睡觉"
+    - "有人睡觉吗"
+    - "这波可以"
+    - "牛的"
+    - "太强了"
+    - "感谢大佬"
+    - "笑死"
+    - "卧槽好帅"
+    - "我直接破防"
+    - "这也太离谱"
+    - "真的顶"
+    - "救命啊"
+    - "我人没了"
+    - "又迷路了"
+    - "谁有床"
+    - "给点面包"
+    - "求个火把"
+    - "今天运气真差"
+    - "出门就摔死"
+    - "我裂开了"
+    - "好家伙"
+    - "我先去挖会"
+    - "等下回"
+    - "今天人有点少"
+    - "这服风景不错"
+    - "主城在哪"
+    - "复活点在哪"
+    - "有交易区吗"
+    - "谁家卖吃的"
+    - "快天黑了"
+    - "有人在线吗"
   agreement-phrases:
     - "确实"
     - "6"
